=== rmw ChangeLog ===

2024-03-18

  * Release v0.9.2

2024-03-08

  * Fix translations not working when using the AppImage

2024-03-02

  * Show counter in real-time as items are getting purged

2024-02-28

  * Update for use with canfigger 0.3.0

2023-05-17

  * bugfix: In some cases, trashinfo file doesn't get removed (#400)
  * rmw v0.9.1 released

2023-03-18

  * tests: build or rebuild binary before running script-based tests (fix for
  script-based test failures when 'meson test' is run in a clean build
  directory)

2023-02-27

  - on MacOS and *bsd, specifying the PKG_CONFIG_PATH is no longer needed to
  find the ncurses menu library

2023-02-23

  * fix build on Alpine Linux (check for and link to musl-fts)
    Thanks to @eli-schwartz and Hello71 from #musl on Libera IRC.

2023-02-15

  * change message displayed to user when a file being rmw'ed is on a
  filesystem that doesn't have a WASTE folder defined
  * rmw v0.9.0 released

2023-02-06

  + Ignore requests to ReMove top-level files, add --top-level-bypass option
  to bypass the protection
  + Ignore requests to ReMove user's home directory

2023-01-27

  * replace function used to remove directories with rm from FreeBSD;
  Thanks to @DiegoMagdaleno and @dcantrell

2022-12-24

  * bugfix: buffer underflow when calling trim_char() with empty
  string (Thanks to Christopher Wellons)
  * replace valgrind test setup with asan (-fsanitize)

2022-09-21

  - When purging, '-ff' is no longer needed to confirm removal of
  non-writable expired directories and files

2022-02-08

  * the 'ESC' key can now be used to quit the restore file selection menu

2022-01-25

  * rmw v0.8.1 released

2022-01-24

  * the curses menu library is now much more likely to be found on *BSD
  systems

  * bugfix: when attempting to restore a file from a waste folder
  listed in the config file that has a trailing slash, rmw will no
  longer report that the file is not in a waste folder.

2022-01-07
